fixed dark mode h1 colour

--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,8 @@ h1 a:hover {
   background-color: rgba(255, 255, 255, 0.8);
   z-index: 313412;
 }
-h1 a {
-  color: rgba(0, 0, 0, 0.65) !important;
+h1 {
+  color: rgba(0, 0, 0, 0.65);
 }
 .leaflet-control-zoom {
   position: absolute;
